add default route for "/"

--- a/resources/views/layouts/master.html
+++ b/resources/views/layouts/master.html
@@ -10,7 +10,7 @@
         <div id="content">{% block content %}{% endblock %}</div>
         <div id="footer">
             {% block footer %}
-                &copy; Copyright 2011 by <a href="http://domain.invalid/">you</a>.
+                &copy; Copyright {{ "now"|date('Y')}}
             {% endblock %}
         </div>
     </body>
