add service provider and class creation using reflection

--- a/resources/views/admin/foo.html
+++ b/resources/views/admin/foo.html
@@ -1,6 +1,6 @@
 {% extends "layouts/master.html" %}
 
-{% block title %}Index{% endblock %}
+{% block title %}Foo page{% endblock %}
 
 {% block head %}
     {{ parent() }}
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1>{{name}}</h1>
+    <h1>Hi {{name}}!</h1>
     <p class="important">
         Welcome to my awesome homepage.
     </p>
