--- a/resources/views/admin/foo.html
+++ b/resources/views/admin/foo.html
@@ -14,4 +14,11 @@
     <p class="important">
         Welcome to my awesome homepage.
     </p>
+    <form action="/bar" method="POST">
+    	<div class="form-group">
+    		Name
+    		<input type="text" name="name" class="form-control">
+    	</div>
+    	<button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 {% endblock %}
